- Merged with contributions from BADC
- Repackaged from "esg.saml" to "esg.security"
- Repackaged "esg.security.auth" to "esg.security.authn"

Note that the above changes alter the API of the SAMLAttributes interface, and consequently of the SAMLAttributesFactory interface:
any implementation of the factory interface must now generate attributes that have both a name and a value, either as simple strings
or as (group,role) pairs.

- Added BSD Open Source License
- Changed log file name to avoid possible conflicts with other applications
- Moved configuration files to module specific directory: esg/saml/config.
- Upgraded dependencies to latest version of OpenSAML libraries (i.e. opensaml, openws and xmltooling jars)
- Removed warnings due to obsolete Xerces and SAML libraries.
- Implementation of optional white-listing for Attribute and Authorization Services
- Changed versioning schema to include datanode schema at the beginning
- Moved utils subpackage to esg.security.utils

1.0.2
- Changed versioning number

1.1.0
Provided stub implementations of PolicyService, RegistryService, AttributeService and AuthorizationService that are backed up by local XML files.

Version 1.1.1
- Provided web application home page with facility to test the Attribute and Authorization services.

Version 1.1.2
- Provided support for freely available resources, using a policy attribute of type "ANY".

Version 1.2.0
- Inserted support for database back-ends of Authentication and Authorization services.

Version 1.2.1
- Switched to loading properties from esg.properties via ESGF Properties subclass

Version 1.2.2
- Switched property names to esgf.host, esgf.https.port

Version 1.2.3
- Inserting support for compatibility with legacy system: transform (group,role) pairs into attribute (name, value) pairs.

Version 1.2.4
- Inserted policy that allowed free access to all URLs that contain 'esg_dataroot'

Version 1.2.8
- Changed level of some log statements.